--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crypts",
-  "description": "集成一些常用的加密解密算法，如：base64、md5、sha1、crc32、DES等。",
-  "version": "1.0.0",
+  "description": "集成一些常用的加密解密算法，如：base64、md5、sha1、sha256、crc32。",
+  "version": "1.0.1",
   "author": {
     "name": "Spikef",
     "email": "Spikef@Foxmail.com",
